[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awslabs-cost-explorer-mcp-server"
dynamic = ["version"]
description = "MCP server for analyzing AWS costs and usage data through the AWS Cost Explorer API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "AWS Labs", email = "aws-labs@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3>=1.28.0",
    "fastmcp>=0.1.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.1",
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.254",
]

[project.urls]
Homepage = "https://github.com/aws-samples/cost-explorer-mcp-server"
Issues = "https://github.com/aws-samples/cost-explorer-mcp-server/issues"

[tool.hatch.version]
path = "awslabs/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
ignore = []

[project.scripts]
cost-explorer-mcp-server = "awslabs.cost_explorer_mcp_server:app.run"
