[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awslabs.mwaa-mcp-server"
version = "0.1.0"
description = "AWS MWAA MCP Server for managing Amazon Managed Workflows for Apache Airflow environments and Airflow operations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Amazon Web Services", email = "aws-mcp-servers@amazon.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastmcp>=3.0.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "pytest>=7.3.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.1.1",
    "pyright>=1.1.401",
    "ruff>=0.11.11",
]

hosted = ["mcp-proxy-for-aws>=1.1.1"]

[project.urls]
Homepage = "https://github.com/awslabs/mcp"
Documentation = "https://awslabs.github.io/mcp/servers/mwaa-mcp-server/"
Issues = "https://github.com/awslabs/mcp/issues"

[project.scripts]
mwaa-mcp-server = "awslabs.mwaa_mcp_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "asyncio",
    "anyio",
]

[tool.coverage.run]
omit = ["tests/*"]
