[project]
name = \"awslabs.prometheus-mcp-server\"
version = \"0.1.0\"
description = \"MCP server for interacting with AWS Managed Prometheus\"
readme = \"README.md\"
requires-python = \">=3.10\"
dependencies = [
    \"boto3>=1.38.7\",
    \"httpx>=0.28.1\",
    \"mcp[cli]>=1.7.0\",
    \"requests>=2.32.3\",
    \"python-dotenv>=1.0.0\",
    \"pydantic>=2.0.0\",
]

[project.scripts]
\"awslabs.prometheus-mcp-server\" = \"awslabs.prometheus_mcp_server.server:main\"

[build-system]
requires = [\"hatchling\"]
build-backend = \"hatchling.build\"

[tool.ruff]
line-length = 99
target-version = \"py310\"

[tool.ruff.lint]
select = [\"E\", \"F\", \"I\", \"B\", \"Q\"]
ignore = [\"E203\", \"E501\"]

[tool.ruff.lint.isort]
known-first-party = [\"awslabs\"]

[tool.ruff.format]
quote-style = \"single\"
indent-style = \"space\"
line-ending = \"auto\"

[tool.commitizen]
name = \"cz_conventional_commits\"
version = \"0.1.0\"
tag_format = \"$version\"
version_files = [
    \"pyproject.toml:version\",
    \"awslabs/prometheus_mcp_server/__init__.py:__version__\"
]
update_changelog_on_bump = true