[project]
name = "roda-mcp-server"
version = "0.1.0"
description = "MCP server for discovering and previewing AWS Registry of Open Data datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx[http2]>=0.27.0",
    "boto3>=1.28.0",
]
license = {text = "Apache-2.0"}
license-files = ["LICENSE", "NOTICE" ]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
]

[project.scripts]
roda-mcp-server = "awslabs.roda_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
]
